--- a/BodyCareProducts/src/main/webapp/css/style.css
+++ b/BodyCareProducts/src/main/webapp/css/style.css
@@ -28,7 +28,7 @@
 -------------------------------------------------------------------*/
 
 /*----------------------------------------*/
-/* Template default CSS
+/* Template default CSS done
 /*----------------------------------------*/
 
 html,
@@ -184,7 +184,7 @@ ol {
 	color: #fff;
 }
 
-/* buttons */
+/* buttons done */ 
 
 .primary-btn {
 	display: inline-block;
@@ -208,7 +208,7 @@ ol {
 	cursor: pointer;
 }
 
-/* Preloder */
+/* Preloder done*/
 
 #preloder {
 	position: fixed;
@@ -341,6 +341,8 @@ ol {
 	letter-spacing: 0.325px;
 }
 
+
+/*****************
 .header-top {
 	display: -webkit-box;
 	display: -ms-flexbox;
@@ -419,9 +421,9 @@ ol {
 	display: inline-block;
 	margin-left: 15px;
 }
-.navBarContainer{
-	background-color: #6C4A4A;
-}
+
+*/
+
 .inner-header {
 	padding: 39px 0;
 }
@@ -2051,7 +2053,7 @@ login sectionnnnnn
 	line-height: 39px;
 }
 
-.prduct-list .product-item {
+.product-list .product-item {
 	margin-bottom: 25px;
 }
 
