Edit contact css

--- a/BodyCareProducts/src/main/webapp/css/style.css
+++ b/BodyCareProducts/src/main/webapp/css/style.css
@@ -198,8 +198,8 @@ ol {
 
 .site-btn {
 	color: #ffffff;
-	background: #e7ab3c;
-	border: 1px solid #e7ab3c;
+	background: #2B394A;
+	border: 1px solid #ffffff;
 	border-radius: 15px;
 	font-size: 14px;
 	font-weight: 700;
@@ -3626,7 +3626,7 @@ login sectionnnnnn
 
 .map-inner .icon i {
 	font-size: 48px;
-	color: #e7ab3c;
+	color: #FDA5A4;
 }
 
 /*---------------------
@@ -3643,7 +3643,7 @@ login sectionnnnnn
 }
 
 .contact-title h4 {
-	color: #252525;
+	color: #2B394A;
 	font-weight: 700;
 	margin-bottom: 16px;
 }
@@ -3681,12 +3681,12 @@ login sectionnnnnn
 
 .contact-widget .cw-item .ci-text p {
 	font-size: 18px;
-	color: #252525;
+	color: #2B394A;
 	margin-bottom: 0;
 }
 
 .contact-form .leave-comment h4 {
-	color: #292f3b;
+	color: #2B394A;
 	font-weight: 700;
 	margin-bottom: 20px;
 }
@@ -3698,7 +3698,7 @@ login sectionnnnnn
 .contact-form .leave-comment .comment-form input {
 	width: 100%;
 	font-size: 16px;
-	color: #636363;
+	color: #2B394A;
 	height: 50px;
 	border: 1px solid #ebebeb;
 	border-radius: 5px;
@@ -3710,7 +3710,7 @@ login sectionnnnnn
 	width: 100%;
 	resize: none;
 	font-size: 16px;
-	color: #636363;
+	color: #2B394A;
 	height: 150px;
 	border: 1px solid #ebebeb;
 	border-radius: 5px;
