Edit checkout css

--- a/BodyCareProducts/src/main/webapp/css/style.css
+++ b/BodyCareProducts/src/main/webapp/css/style.css
@@ -28,17 +28,15 @@
 -------------------------------------------------------------------*/
 
 /*----------------------------------------*/
-/* Template default CSS done
+/* Template default CSS
 /*----------------------------------------*/
 
 html,
 body {
 	height: 100%;
-	font-family: 'Roboto', sans-serif;
+	font-family: "Muli", sans-serif;
 	-webkit-font-smoothing: antialiased;
 	font-smoothing: antialiased;
-	background-color:#f5f5f5;
-	color: #2B394A;
 }
 
 h1,
@@ -48,9 +46,9 @@ h4,
 h5,
 h6 {
 	margin: 0;
-	
+	color: #111111;
 	font-weight: 400;
-	font-family: 'Karla', sans-serif;
+	font-family: "Muli", sans-serif;
 }
 
 h1 {
@@ -79,7 +77,7 @@ h6 {
 
 p {
 	font-size: 16px;
-	font-family: 'Roboto', sans-serif;
+	font-family: "Muli", sans-serif;
 	color: #636363;
 	font-weight: 400;
 	line-height: 26px;
@@ -109,11 +107,6 @@ ol {
 	padding: 0;
 	margin: 0;
 }
-/*-------------------------------------
-
-
-
-
 
 /*---------------------
   Helper CSS
@@ -137,7 +130,7 @@ ol {
 }
 
 .section-title h2 {
-	color: #2B394A;
+	color: #252525;
 	font-size: 36px;
 	font-weight: 700;
 	margin-bottom: 38px;
@@ -184,7 +177,7 @@ ol {
 	color: #fff;
 }
 
-/* buttons done */ 
+/* buttons */
 
 .primary-btn {
 	display: inline-block;
@@ -200,7 +193,6 @@ ol {
 	color: #ffffff;
 	background: #e7ab3c;
 	border: 1px solid #e7ab3c;
-	border-radius: 15px;
 	font-size: 14px;
 	font-weight: 700;
 	text-transform: uppercase;
@@ -208,7 +200,7 @@ ol {
 	cursor: pointer;
 }
 
-/* Preloder done*/
+/* Preloder */
 
 #preloder {
 	position: fixed;
@@ -303,7 +295,7 @@ ol {
 
 .ht-right .lan-selector .ddcommon .ddTitle .ddArrow:before {
 	content: "3";
-	font-family: 'Roboto', sans-serif;
+	font-family: "ElegantIcons";
 	font-size: 14px;
 	color: #636363;
 	float: right;
@@ -341,8 +333,6 @@ ol {
 	letter-spacing: 0.325px;
 }
 
-
-/*****************
 .header-top {
 	display: -webkit-box;
 	display: -ms-flexbox;
@@ -422,8 +412,6 @@ ol {
 	margin-left: 15px;
 }
 
-*/
-
 .inner-header {
 	padding: 39px 0;
 }
@@ -470,15 +458,14 @@ ol {
 	right: 11px;
 	top: 10px;
 	content: "3";
-	font-family: 'Roboto', sans-serif;
+	font-family: "ElegantIcons";
 	font-size: 16px;
 	color: #b2b2b2;
 }
 
 .inner-header .advanced-search .input-group {
-	max-width: 100%;
+	max-width: 70%;
 	height: 100%;
-	
 }
 
 .inner-header .advanced-search .input-group input {
@@ -488,9 +475,6 @@ ol {
 	font-size: 16px;
 	color: #d1d1d1;
 	padding-left: 20px;
-	
-	
-	border-radius: 15px 0px 0px 15px;
 }
 
 .inner-header .advanced-search .input-group button {
@@ -499,11 +483,10 @@ ol {
 	position: absolute;
 	right: -3px;
 	top: -1px;
-	border: 1px solid #FDA5A4;
-	background: #FDA5A4;
+	border: 1px solid #e7ab3c;
+	background: #e7ab3c;
 	padding: 12px 16px 12px;
 	cursor: pointer;
-	border-radius: 0px 15px 15px 0px;
 }
 
 .inner-header .nav-right {
@@ -529,7 +512,7 @@ ol {
 	top: -1px;
 	height: 15px;
 	width: 15px;
-	background: #FDA5A4;
+	background: #e7ab3c;
 	color: #ffffff;
 	border-radius: 50%;
 	font-size: 11px;
@@ -560,7 +543,7 @@ ol {
 	top: -1px;
 	height: 15px;
 	width: 15px;
-	background: #FDA5A4;
+	background: #e7ab3c;
 	color: #ffffff;
 	border-radius: 50%;
 	font-size: 11px;
@@ -644,7 +627,7 @@ ol {
 	letter-spacing: 2px;
 	display: block;
 	text-align: center;
-	background: #FDA5A4;
+	background: #191919;
 	color: #ffffff;
 	padding: 15px 30px 12px;
 	margin-bottom: 10px;
@@ -666,7 +649,7 @@ ol {
 }
 
 .nav-item {
-	background: #2B394A;
+	background: #252525;
 	display: -webkit-box;
 	display: -ms-flexbox;
 	display: flex;
@@ -677,17 +660,12 @@ ol {
 }
 
 .nav-item .nav-depart .depart-btn {
-	background: #2B394A;
+	background: #3b3b3b;
 	color: #ffffff;
 	padding: 14px 84px 14px 18px;
 	cursor: pointer;
 	position: relative;
 }
-
-.nav-item .nav-depart .depart-btn:hover {
-	background: #354455;
-}
-
 
 .nav-item .nav-depart .depart-btn:hover .depart-hover {
 	top: 52px;
@@ -739,7 +717,7 @@ ol {
 }
 
 .nav-item .nav-depart .depart-btn .depart-hover li.active a {
-	color: #FDA5A4;
+	color: #e7ab3c;
 }
 
 .nav-item .nav-depart .depart-btn .depart-hover li a {
@@ -773,7 +751,7 @@ ol {
 }
 
 .nav-item .nav-menu li.active a {
-	background: #926666;;
+	background: #e7ab3c;
 }
 
 .nav-item .nav-menu li a {
@@ -790,14 +768,13 @@ ol {
 }
 
 .nav-item .nav-menu li:hover>a {
-	background: #354455;
+	background: #e7ab3c;
 }
 
 .nav-item .nav-menu li:hover .dropdown {
 	opacity: 1;
 	visibility: visible;
 	top: 52px;
-	
 }
 
 .nav-item .nav-menu li .dropdown {
@@ -806,19 +783,17 @@ ol {
 	top: 82px;
 	width: 200px;
 	z-index: 99;
-	background: white;
+	background: #252525;
 	opacity: 0;
 	visibility: hidden;
 	-webkit-transition: all 0.3s;
 	-o-transition: all 0.3s;
 	transition: all 0.3s;
-	
 }
 
 .nav-item .nav-menu li .dropdown li {
 	display: block;
 	margin-left: 0;
-	
 }
 
 .nav-item .nav-menu li .dropdown li:hover>a {
@@ -830,19 +805,12 @@ ol {
 	border-right: 0;
 	padding: 13px 20px 12px 30px;
 	text-transform: capitalize;
-	color: #2B394A;
 }
 
 .slicknav_menu {
 	display: none;
 }
-/* --------
-login sectionnnnnn
-------------*/
 
-.loginInputs{
-	border-radius: 15px;
-}
 /*---------------------
   Hero Section
 -----------------------*/
@@ -1532,7 +1500,7 @@ login sectionnnnnn
 -----------------------*/
 
 .footer-section {
-	background: #2B394A;
+	background: #191919;
 	padding-top: 75px;
 }
 
@@ -1550,7 +1518,7 @@ login sectionnnnnn
 
 .footer-left ul li {
 	list-style: none;
-	color: #ffffff;
+	color: #b2b2b2;
 	font-size: 16px;
 	line-height: 30px;
 }
@@ -1563,7 +1531,7 @@ login sectionnnnnn
 	display: inline-block;
 	height: 40px;
 	width: 40px;
-	background: #D8B9C3;
+	background: #434445;
 	color: #ffffff;
 	text-align: center;
 	line-height: 40px;
@@ -1583,7 +1551,7 @@ login sectionnnnnn
 	top: 0;
 	height: 100%;
 	width: 100%;
-	background: #f2dbc9;
+	background: #e7ab3c;
 	content: "";
 	border-radius: 50%;
 	opacity: 0;
@@ -1637,7 +1605,6 @@ login sectionnnnnn
 	font-size: 16px;
 	border: none;
 	padding-left: 20px;
-	
 }
 
 .newslatter-item .subscribe-form input::-webkit-input-placeholder {
@@ -2053,7 +2020,7 @@ login sectionnnnnn
 	line-height: 39px;
 }
 
-.product-list .product-item {
+.prduct-list .product-item {
 	margin-bottom: 25px;
 }
 
@@ -2681,14 +2648,14 @@ login sectionnnnnn
 .cart-table table {
 	width: 100%;
 	min-width: 480px;
-	border: 1px solid #ebebeb;
+	border: 1px solid #C5D0DD;
 }
 
 .cart-table table tr th {
 	font-size: 16px;
-	color: #252525;
+	color: #2B394A;
 	font-weight: 700;
-	border-bottom: 1px solid #ebebeb;
+	border-bottom: 1px solid #C5D0DD;
 	text-align: center;
 	padding: 18px 0 19px;
 	text-transform: uppercase;
@@ -2716,7 +2683,7 @@ login sectionnnnnn
 }
 
 .cart-table table tr td.cart-title h5 {
-	color: #252525;
+	color: #2B394A;
 }
 
 .cart-table table tr td.p-price {
@@ -2725,7 +2692,7 @@ login sectionnnnnn
 
 .cart-table table tr td.p-price,
 .cart-table table tr td.total-price {
-	color: #e7ab3c;
+	color: #C5D0DD;
 	font-size: 16px;
 	font-weight: 700;
 }
@@ -2746,14 +2713,14 @@ login sectionnnnnn
 .cart-table table tr td.qua-col .pro-qty {
 	width: 123px;
 	height: 46px;
-	border: 2px solid #ebebeb;
+	border: 2px solid #C5D0DD;
 	padding: 0 15px;
 	float: left;
 }
 
 .cart-table table tr td.qua-col .pro-qty .qtybtn {
 	font-size: 24px;
-	color: #b2b2b2;
+	color: #2B394A;
 	float: left;
 	line-height: 38px;
 	cursor: pointer;
@@ -2770,7 +2737,7 @@ login sectionnnnnn
 	font-size: 14px;
 	font-weight: 700;
 	border: none;
-	color: #4c4c4c;
+	color: #2B394A;
 	line-height: 40px;
 	float: left;
 }
@@ -2781,7 +2748,7 @@ login sectionnnnnn
 
 .cart-table table tr td.close-td {
 	font-size: 16px;
-	color: #252525;
+	color: #2B394A;
 	width: 8%;
 }
 
@@ -2794,8 +2761,8 @@ login sectionnnnnn
 }
 
 .cart-buttons .continue-shop {
-	color: #b2b2b2;
-	border: 2px solid #ebebeb;
+	color: #2B394A;
+	border: 2px solid #C5D0DD;
 	background: #ffffff;
 	margin-right: 8px;
 	padding: 12px 20px 12px 20px;
@@ -2803,9 +2770,9 @@ login sectionnnnnn
 }
 
 .cart-buttons .up-cart {
-	color: #252525;
-	background: #f3f3f3;
-	border: 2px solid #ebebeb;
+	color: #2B394A;
+	background: #C5D0DD;
+	border: 2px solid #C5D0DD;
 	padding: 12px 20px 12px 20px;
 }
 
@@ -2814,7 +2781,7 @@ login sectionnnnnn
 }
 
 .discount-coupon h6 {
-	color: #232530;
+	color: #2B394A;
 	font-weight: 700;
 	text-transform: uppercase;
 	margin-bottom: 16px;
@@ -2827,8 +2794,8 @@ login sectionnnnnn
 .discount-coupon .coupon-form input {
 	width: 100%;
 	height: 46px;
-	border: 2px solid #ebebeb;
-	color: #b2b2b2;
+	border: 2px solid #C5D0DD;
+	color: #2B394A;
 	font-size: 14px;
 	padding-left: 20px;
 }
@@ -2837,15 +2804,15 @@ login sectionnnnnn
 	position: absolute;
 	right: 0;
 	top: 0;
-	color: #252525;
+	color: #2B394A;
 	background: transparent;
 	border: 1px solid transparent;
 	padding: 13px 25px 10px 35px;
 }
 
 .proceed-checkout ul {
-	border: 2px solid #ebebeb;
-	background: #f3f3f3;
+	border: 2px solid #C5D0DD;
+	background: #C5D0DD;
 	padding-left: 25px;
 	padding-right: 25px;
 	padding-top: 16px;
@@ -2856,7 +2823,7 @@ login sectionnnnnn
 	list-style: none;
 	font-size: 16px;
 	font-weight: 700;
-	color: #252525;
+	color: #2B394A;
 	text-transform: uppercase;
 	overflow: hidden;
 }
@@ -2877,7 +2844,7 @@ login sectionnnnnn
 }
 
 .proceed-checkout ul li.cart-total span {
-	color: #e7ab3c;
+	color: #fa8684;
 }
 
 .proceed-checkout ul li span {
@@ -2888,7 +2855,7 @@ login sectionnnnnn
 	font-size: 14px;
 	font-weight: 700;
 	color: #ffffff;
-	background: #252525;
+	background: #2B394A;
 	text-transform: uppercase;
 	padding: 15px 25px 14px 25px;
 	display: block;
@@ -2910,11 +2877,11 @@ login sectionnnnnn
 
 .checkout-content .content-btn,
 .checkout-content input {
-	color: #252525;
+	color: #2B394A;
 	font-size: 16px;
-	border: 2px solid #ebebeb;
+	border: 2px solid #C5D0DD;
 	padding: 14px 20px;
-	background: #f3f3f3;
+	background: #C5D0DD;
 	text-align: center;
 	display: block;
 }
@@ -2924,13 +2891,13 @@ login sectionnnnnn
 }
 
 .checkout-form h4 {
-	color: #252525;
+	color: #2B394A;
 	font-weight: 700;
 	margin-bottom: 30px;
 }
 
 .checkout-form label {
-	color: #252525;
+	color: #2B394A;
 	font-size: 16px;
 	margin-bottom: 5px;
 }
@@ -2961,7 +2928,7 @@ login sectionnnnnn
 	padding-left: 32px;
 	margin-bottom: 0;
 	font-size: 14px;
-	color: #252525;
+	color: #2B394A;
 }
 
 .checkout-form .create-item label input {
@@ -2970,8 +2937,8 @@ login sectionnnnnn
 }
 
 .checkout-form .create-item label input:checked~span {
-	background: #e7ab3c;
-	border-color: #e7ab3c;
+	background: #C5D0DD;
+	border-color: #C5D0DD;
 }
 
 .checkout-form .create-item label .checkmark {
@@ -3010,7 +2977,7 @@ login sectionnnnnn
 
 .checkout-form .place-order .order-total .order-table li {
 	list-style: none;
-	color: #252525;
+	color: #2B394A;
 	font-size: 14px;
 	font-weight: 700;
 	text-transform: uppercase;
@@ -3035,7 +3002,7 @@ login sectionnnnnn
 }
 
 .checkout-form .place-order .order-total .order-table li.total-price span {
-	color: #e7ab3c;
+	color: #C5D0DD;
 }
 
 .checkout-form .place-order .order-total .order-table li span {
@@ -3052,7 +3019,7 @@ login sectionnnnnn
 	padding-left: 32px;
 	margin-bottom: 0;
 	font-size: 14px;
-	color: #252525;
+	color: #2B394A;
 }
 
 .checkout-form .place-order .order-total .payment-check .pc-item label input {
@@ -3061,8 +3028,8 @@ login sectionnnnnn
 }
 
 .checkout-form .place-order .order-total .payment-check .pc-item label input:checked~span {
-	background: #e7ab3c;
-	border-color: #e7ab3c;
+	background: #C5D0DD;
+	border-color: #C5D0DD;
 }
 
 .checkout-form .place-order .order-total .payment-check .pc-item label .checkmark {
@@ -3093,8 +3060,8 @@ login sectionnnnnn
 
 .checkout-form .place-order .order-total .order-btn .place-btn {
 	padding: 13px 40px 11px;
-	background: #000000;
-	border-color: #000000;
+	background: #2B394A;
+	border-color: #2B394A;
 }
 
 /*---------------------
@@ -3797,7 +3764,7 @@ login sectionnnnnn
 
 .register-form h2,
 .login-form h2 {
-	color: #2B394A;
+	color: #252525;
 	font-weight: 700;
 	text-align: center;
 	margin-bottom: 35px;
@@ -3842,7 +3809,7 @@ login sectionnnnnn
 
 .register-form .switch-login .or-login,
 .login-form .switch-login .or-login {
-	color: #2B394A;;
+	color: #252525;
 	font-size: 14px;
 	letter-spacing: 2px;
 	text-transform: uppercase;
@@ -3898,7 +3865,6 @@ login sectionnnnnn
 	width: 13px;
 	border: 1px solid #6C6C6C;
 	border-radius: 2px;
-	
 }
 
 .login-form .group-input .gi-more label .checkmark:after {
