--- a/BodyCareProducts/src/main/webapp/css/login-register.css
+++ b/BodyCareProducts/src/main/webapp/css/login-register.css
@@ -2,10 +2,17 @@
 /*---------------------
   Login and Register Form
 -----------------------*/
+.pageBody{
+	background:url(../img/skinCarePics/22.png) ;
+	background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+}
 
 .register-login-section {
 	padding-top: 72px;
 	padding-bottom: 80px;
+	font-weight: bold;
 }
 
 .register-form h2,
@@ -57,6 +64,7 @@
 .login-form .switch-login .or-login {
 	color: #2B394A;;
 	font-size: 14px;
+	
 	letter-spacing: 2px;
 	text-transform: uppercase;
 	position: relative;
@@ -131,7 +139,7 @@
 	line-height: 20px;
 	margin-top: -2px;
 	font-size: 14px;
-	color: #6B6B6B;
+	color: #2B394A;
 }
 
 /* --------
