--- a/BodyCareProducts/src/main/webapp/css/style.css
+++ b/BodyCareProducts/src/main/webapp/css/style.css
@@ -193,13 +193,14 @@ ol {
 	padding: 12px 30px;
 	color: #ffffff;
 	background: #e7ab3c;
+
 	text-transform: uppercase;
 }
 
 .site-btn {
 	color: #ffffff;
-	background: #e7ab3c;
-	border: 1px solid #e7ab3c;
+	background: #d79681;
+	border: 1px solid #d79681;
 	border-radius: 15px;
 	font-size: 14px;
 	font-weight: 700;
@@ -490,17 +491,17 @@ ol {
 	padding-left: 20px;
 	
 	
-	border-radius: 15px 0px 0px 15px;
+	border-radius: 15px ;
 }
 
 .inner-header .advanced-search .input-group button {
-	font-size: 16px;
+	font-size: 17px;
 	color: #ffffff;
 	position: absolute;
 	right: -3px;
 	top: -1px;
-	border: 1px solid #FDA5A4;
-	background: #FDA5A4;
+	border: 1px solid #d79681;
+	background: #d79681;
 	padding: 12px 16px 12px;
 	cursor: pointer;
 	border-radius: 0px 15px 15px 0px;
@@ -518,7 +519,7 @@ ol {
 }
 
 .inner-header .nav-right li.heart-icon a {
-	color: #252525;
+	color: #ffffff;
 	position: relative;
 	display: inline-block;
 }
@@ -529,7 +530,7 @@ ol {
 	top: -1px;
 	height: 15px;
 	width: 15px;
-	background: #FDA5A4;
+	background: #d79681;
 	color: #ffffff;
 	border-radius: 50%;
 	font-size: 11px;
@@ -549,7 +550,7 @@ ol {
 }
 
 .inner-header .nav-right li.cart-icon a {
-	color: #252525;
+	color: #ffffff;
 	position: relative;
 	display: inline-block;
 }
@@ -560,7 +561,7 @@ ol {
 	top: -1px;
 	height: 15px;
 	width: 15px;
-	background: #FDA5A4;
+	background: #d79681;
 	color: #ffffff;
 	border-radius: 50%;
 	font-size: 11px;
@@ -610,11 +611,11 @@ ol {
 }
 
 .inner-header .nav-right li.cart-icon .cart-hover .select-items table tr td.si-text .product-selected h6 {
-	color: #232530;
+	color: #ffffff;
 }
 
 .inner-header .nav-right li.cart-icon .cart-hover .select-items table tr td.si-close {
-	color: #252525;
+	color: #ffffff;
 	font-size: 16px;
 	cursor: pointer;
 }
@@ -662,7 +663,7 @@ ol {
 .inner-header .nav-right li.cart-price {
 	font-size: 18px;
 	font-weight: 700;
-	color: #252525;
+	color: #ffffff;
 }
 
 .nav-item {
@@ -1563,7 +1564,7 @@ login sectionnnnnn
 	display: inline-block;
 	height: 40px;
 	width: 40px;
-	background: #D8B9C3;
+	background: #d79681;
 	color: #ffffff;
 	text-align: center;
 	line-height: 40px;
@@ -1611,7 +1612,7 @@ login sectionnnnnn
 .footer-widget ul li a {
 	line-height: 36px;
 	font-size: 16px;
-	color: #b2b2b2;
+	color: #ffffff;
 }
 
 .newslatter-item h5 {
@@ -1621,7 +1622,7 @@ login sectionnnnnn
 }
 
 .newslatter-item p {
-	color: #b2b2b2;
+	color: #ffffff;
 	line-height: 26px;
 }
 
@@ -1631,48 +1632,50 @@ login sectionnnnnn
 
 .newslatter-item .subscribe-form input {
 	color: #b2b2b2;
-	background: #303030;
+	background: #ffffff;
 	width: 100%;
 	height: 46px;
 	font-size: 16px;
 	border: none;
 	padding-left: 20px;
+	border-radius: 15px;
 	
 }
 
 .newslatter-item .subscribe-form input::-webkit-input-placeholder {
-	color: #b2b2b2;
+	color: #ffffff;
 }
 
 .newslatter-item .subscribe-form input::-moz-placeholder {
-	color: #b2b2b2;
+	color: #ffffff;
 }
 
 .newslatter-item .subscribe-form input:-ms-input-placeholder {
-	color: #b2b2b2;
+	color: #ffffff;
 }
 
 .newslatter-item .subscribe-form input::-ms-input-placeholder {
-	color: #b2b2b2;
+	color: #ffffff;
 }
 
 .newslatter-item .subscribe-form input::placeholder {
-	color: #b2b2b2;
+	color: #b1b1b1;
 }
 
 .newslatter-item .subscribe-form button {
 	display: inline-block;
 	color: #ffffff;
-	background: #e7ab3c;
-	font-size: 13px;
+	background: #d79681;
+	font-size: 11.5px;
 	font-weight: 700;
 	text-transform: uppercase;
-	border: 1px solid #e7ab3c;
+	border: 2px solid #d79681;
 	position: absolute;
 	right: 0;
 	top: 0;
 	padding: 13px 20px 12px;
 	cursor: pointer;
+	border-radius: 0px 15px 15px 0px;
 }
 
 .copyright-reserved {
@@ -1684,11 +1687,11 @@ login sectionnnnnn
 .copyright-reserved .copyright-text {
 	float: left;
 	font-size: 16px;
-	color: #b2b2b2;
+	color: #ffffff;
 }
 
 .copyright-reserved .copyright-text a {
-	color: #b2b2b2;
+	color: #ffffff;
 }
 
 .copyright-reserved .copyright-text i {
