--- a/BodyCareProducts/src/main/webapp/css/style.css
+++ b/BodyCareProducts/src/main/webapp/css/style.css
@@ -28,17 +28,15 @@
 -------------------------------------------------------------------*/
 
 /*----------------------------------------*/
-/* Template default CSS done
+/* Template default CSS
 /*----------------------------------------*/
 
 html,
 body {
 	height: 100%;
-	font-family: 'Roboto', sans-serif;
+	font-family: "Muli", sans-serif;
 	-webkit-font-smoothing: antialiased;
 	font-smoothing: antialiased;
-	background-color:#f5f5f5;
-	color: #2B394A;
 }
 
 h1,
@@ -48,9 +46,9 @@ h4,
 h5,
 h6 {
 	margin: 0;
-	
+	color: #111111;
 	font-weight: 400;
-	font-family: 'Karla', sans-serif;
+	font-family: "Muli", sans-serif;
 }
 
 h1 {
@@ -79,7 +77,7 @@ h6 {
 
 p {
 	font-size: 16px;
-	font-family: 'Roboto', sans-serif;
+	font-family: "Muli", sans-serif;
 	color: #636363;
 	font-weight: 400;
 	line-height: 26px;
@@ -109,11 +107,6 @@ ol {
 	padding: 0;
 	margin: 0;
 }
-/*-------------------------------------
-
-
-
-
 
 /*---------------------
   Helper CSS
@@ -137,7 +130,7 @@ ol {
 }
 
 .section-title h2 {
-	color: #2B394A;
+	color: #252525;
 	font-size: 36px;
 	font-weight: 700;
 	margin-bottom: 38px;
@@ -184,7 +177,7 @@ ol {
 	color: #fff;
 }
 
-/* buttons done */ 
+/* buttons */
 
 .primary-btn {
 	display: inline-block;
@@ -200,7 +193,6 @@ ol {
 	color: #ffffff;
 	background: #e7ab3c;
 	border: 1px solid #e7ab3c;
-	border-radius: 15px;
 	font-size: 14px;
 	font-weight: 700;
 	text-transform: uppercase;
@@ -208,7 +200,7 @@ ol {
 	cursor: pointer;
 }
 
-/* Preloder done*/
+/* Preloder */
 
 #preloder {
 	position: fixed;
@@ -303,7 +295,7 @@ ol {
 
 .ht-right .lan-selector .ddcommon .ddTitle .ddArrow:before {
 	content: "3";
-	font-family: 'Roboto', sans-serif;
+	font-family: "ElegantIcons";
 	font-size: 14px;
 	color: #636363;
 	float: right;
@@ -341,8 +333,6 @@ ol {
 	letter-spacing: 0.325px;
 }
 
-
-/*****************
 .header-top {
 	display: -webkit-box;
 	display: -ms-flexbox;
@@ -422,8 +412,6 @@ ol {
 	margin-left: 15px;
 }
 
-*/
-
 .inner-header {
 	padding: 39px 0;
 }
@@ -470,15 +458,14 @@ ol {
 	right: 11px;
 	top: 10px;
 	content: "3";
-	font-family: 'Roboto', sans-serif;
+	font-family: "ElegantIcons";
 	font-size: 16px;
 	color: #b2b2b2;
 }
 
 .inner-header .advanced-search .input-group {
-	max-width: 100%;
+	max-width: 70%;
 	height: 100%;
-	
 }
 
 .inner-header .advanced-search .input-group input {
@@ -488,9 +475,6 @@ ol {
 	font-size: 16px;
 	color: #d1d1d1;
 	padding-left: 20px;
-	
-	
-	border-radius: 15px 0px 0px 15px;
 }
 
 .inner-header .advanced-search .input-group button {
@@ -499,11 +483,10 @@ ol {
 	position: absolute;
 	right: -3px;
 	top: -1px;
-	border: 1px solid #FDA5A4;
-	background: #FDA5A4;
+	border: 1px solid #e7ab3c;
+	background: #e7ab3c;
 	padding: 12px 16px 12px;
 	cursor: pointer;
-	border-radius: 0px 15px 15px 0px;
 }
 
 .inner-header .nav-right {
@@ -529,7 +512,7 @@ ol {
 	top: -1px;
 	height: 15px;
 	width: 15px;
-	background: #FDA5A4;
+	background: #e7ab3c;
 	color: #ffffff;
 	border-radius: 50%;
 	font-size: 11px;
@@ -560,7 +543,7 @@ ol {
 	top: -1px;
 	height: 15px;
 	width: 15px;
-	background: #FDA5A4;
+	background: #e7ab3c;
 	color: #ffffff;
 	border-radius: 50%;
 	font-size: 11px;
@@ -644,7 +627,7 @@ ol {
 	letter-spacing: 2px;
 	display: block;
 	text-align: center;
-	background: #FDA5A4;
+	background: #191919;
 	color: #ffffff;
 	padding: 15px 30px 12px;
 	margin-bottom: 10px;
@@ -666,7 +649,7 @@ ol {
 }
 
 .nav-item {
-	background: #2B394A;
+	background: #252525;
 	display: -webkit-box;
 	display: -ms-flexbox;
 	display: flex;
@@ -677,17 +660,12 @@ ol {
 }
 
 .nav-item .nav-depart .depart-btn {
-	background: #2B394A;
+	background: #3b3b3b;
 	color: #ffffff;
 	padding: 14px 84px 14px 18px;
 	cursor: pointer;
 	position: relative;
 }
-
-.nav-item .nav-depart .depart-btn:hover {
-	background: #354455;
-}
-
 
 .nav-item .nav-depart .depart-btn:hover .depart-hover {
 	top: 52px;
@@ -739,7 +717,7 @@ ol {
 }
 
 .nav-item .nav-depart .depart-btn .depart-hover li.active a {
-	color: #FDA5A4;
+	color: #e7ab3c;
 }
 
 .nav-item .nav-depart .depart-btn .depart-hover li a {
@@ -773,7 +751,7 @@ ol {
 }
 
 .nav-item .nav-menu li.active a {
-	background: #926666;;
+	background: #e7ab3c;
 }
 
 .nav-item .nav-menu li a {
@@ -790,14 +768,13 @@ ol {
 }
 
 .nav-item .nav-menu li:hover>a {
-	background: #354455;
+	background: #e7ab3c;
 }
 
 .nav-item .nav-menu li:hover .dropdown {
 	opacity: 1;
 	visibility: visible;
 	top: 52px;
-	
 }
 
 .nav-item .nav-menu li .dropdown {
@@ -806,19 +783,17 @@ ol {
 	top: 82px;
 	width: 200px;
 	z-index: 99;
-	background: white;
+	background: #252525;
 	opacity: 0;
 	visibility: hidden;
 	-webkit-transition: all 0.3s;
 	-o-transition: all 0.3s;
 	transition: all 0.3s;
-	
 }
 
 .nav-item .nav-menu li .dropdown li {
 	display: block;
 	margin-left: 0;
-	
 }
 
 .nav-item .nav-menu li .dropdown li:hover>a {
@@ -830,19 +805,12 @@ ol {
 	border-right: 0;
 	padding: 13px 20px 12px 30px;
 	text-transform: capitalize;
-	color: #2B394A;
 }
 
 .slicknav_menu {
 	display: none;
 }
-/* --------
-login sectionnnnnn
-------------*/
 
-.loginInputs{
-	border-radius: 15px;
-}
 /*---------------------
   Hero Section
 -----------------------*/
@@ -1532,7 +1500,7 @@ login sectionnnnnn
 -----------------------*/
 
 .footer-section {
-	background: #2B394A;
+	background: #191919;
 	padding-top: 75px;
 }
 
@@ -1550,7 +1518,7 @@ login sectionnnnnn
 
 .footer-left ul li {
 	list-style: none;
-	color: #ffffff;
+	color: #b2b2b2;
 	font-size: 16px;
 	line-height: 30px;
 }
@@ -1563,7 +1531,7 @@ login sectionnnnnn
 	display: inline-block;
 	height: 40px;
 	width: 40px;
-	background: #D8B9C3;
+	background: #434445;
 	color: #ffffff;
 	text-align: center;
 	line-height: 40px;
@@ -1583,7 +1551,7 @@ login sectionnnnnn
 	top: 0;
 	height: 100%;
 	width: 100%;
-	background: #f2dbc9;
+	background: #e7ab3c;
 	content: "";
 	border-radius: 50%;
 	opacity: 0;
@@ -1637,7 +1605,6 @@ login sectionnnnnn
 	font-size: 16px;
 	border: none;
 	padding-left: 20px;
-	
 }
 
 .newslatter-item .subscribe-form input::-webkit-input-placeholder {
@@ -2053,7 +2020,7 @@ login sectionnnnnn
 	line-height: 39px;
 }
 
-.product-list .product-item {
+.prduct-list .product-item {
 	margin-bottom: 25px;
 }
 
@@ -3797,7 +3764,7 @@ login sectionnnnnn
 
 .register-form h2,
 .login-form h2 {
-	color: #2B394A;
+	color: #252525;
 	font-weight: 700;
 	text-align: center;
 	margin-bottom: 35px;
@@ -3842,7 +3809,7 @@ login sectionnnnnn
 
 .register-form .switch-login .or-login,
 .login-form .switch-login .or-login {
-	color: #2B394A;;
+	color: #252525;
 	font-size: 14px;
 	letter-spacing: 2px;
 	text-transform: uppercase;
@@ -3898,7 +3865,6 @@ login sectionnnnnn
 	width: 13px;
 	border: 1px solid #6C6C6C;
 	border-radius: 2px;
-	
 }
 
 .login-form .group-input .gi-more label .checkmark:after {
