--- a/BodyCareProducts/src/main/webapp/css/style.css
+++ b/BodyCareProducts/src/main/webapp/css/style.css
@@ -46,7 +46,7 @@ h4,
 h5,
 h6 {
 	margin: 0;
-	color: #111111;
+	color: #2B394A;
 	font-weight: 400;
 	font-family: "Muli", sans-serif;
 }
@@ -185,14 +185,14 @@ ol {
 	font-weight: 700;
 	padding: 12px 30px;
 	color: #ffffff;
-	background: #e7ab3c;
+	background: #d79681;
 	text-transform: uppercase;
 }
 
 .site-btn {
 	color: #ffffff;
-	background: #e7ab3c;
-	border: 1px solid #e7ab3c;
+	background: #d79681;
+	border: 1px solid #d79681;
 	font-size: 14px;
 	font-weight: 700;
 	text-transform: uppercase;
@@ -478,6 +478,7 @@ ol {
 	font-size: 16px;
 	color: #d1d1d1;
 	padding-left: 20px;
+	border-radius: 15px ;
 }
 
 .inner-header .advanced-search .input-group button {
@@ -486,8 +487,8 @@ ol {
 	position: absolute;
 	right: -3px;
 	top: -1px;
-	border: 1px solid #e7ab3c;
-	background: #e7ab3c;
+	border: 1px solid #d79681;
+	background: #d79681;
 	padding: 12px 16px 12px;
 	cursor: pointer;
 }
@@ -504,7 +505,7 @@ ol {
 }
 
 .inner-header .nav-right li.heart-icon a {
-	color: #252525;
+	color: #ffffff;
 	position: relative;
 	display: inline-block;
 }
@@ -515,7 +516,7 @@ ol {
 	top: -1px;
 	height: 15px;
 	width: 15px;
-	background: #e7ab3c;
+	background: #d79681;
 	color: #ffffff;
 	border-radius: 50%;
 	font-size: 11px;
@@ -535,7 +536,7 @@ ol {
 }
 
 .inner-header .nav-right li.cart-icon a {
-	color: #252525;
+	color: #ffffff;
 	position: relative;
 	display: inline-block;
 }
@@ -546,7 +547,7 @@ ol {
 	top: -1px;
 	height: 15px;
 	width: 15px;
-	background: #e7ab3c;
+	background: #d79681;
 	color: #ffffff;
 	border-radius: 50%;
 	font-size: 11px;
@@ -596,11 +597,11 @@ ol {
 }
 
 .inner-header .nav-right li.cart-icon .cart-hover .select-items table tr td.si-text .product-selected h6 {
-	color: #232530;
+	color: #ffffff;
 }
 
 .inner-header .nav-right li.cart-icon .cart-hover .select-items table tr td.si-close {
-	color: #252525;
+	color: #ffffff;
 	font-size: 16px;
 	cursor: pointer;
 }
@@ -648,7 +649,7 @@ ol {
 .inner-header .nav-right li.cart-price {
 	font-size: 18px;
 	font-weight: 700;
-	color: #252525;
+	color: #ffffff;
 }
 
 .nav-item {
@@ -754,7 +755,7 @@ ol {
 }
 
 .nav-item .nav-menu li.active a {
-	background: #e7ab3c;
+	background: #926666;;
 }
 
 .nav-item .nav-menu li a {
@@ -771,7 +772,7 @@ ol {
 }
 
 .nav-item .nav-menu li:hover>a {
-	background: #e7ab3c;
+	background: #354455;
 }
 
 .nav-item .nav-menu li:hover .dropdown {
@@ -786,7 +787,7 @@ ol {
 	top: 82px;
 	width: 200px;
 	z-index: 99;
-	background: #252525;
+	background: white;
 	opacity: 0;
 	visibility: hidden;
 	-webkit-transition: all 0.3s;
@@ -801,7 +802,7 @@ ol {
 
 .nav-item .nav-menu li .dropdown li:hover>a {
 	background: transparent;
-	color: #e7ab3c;
+	color: #2B394A;
 }
 
 .nav-item .nav-menu li .dropdown li a {
@@ -1503,7 +1504,7 @@ ol {
 -----------------------*/
 
 .footer-section {
-	background: #191919;
+	background: #2B394A;
 	padding-top: 75px;
 }
 
@@ -1521,7 +1522,7 @@ ol {
 
 .footer-left ul li {
 	list-style: none;
-	color: #b2b2b2;
+	color: #ffffff;
 	font-size: 16px;
 	line-height: 30px;
 }
@@ -1534,7 +1535,7 @@ ol {
 	display: inline-block;
 	height: 40px;
 	width: 40px;
-	background: #434445;
+	background: #d79681;
 	color: #ffffff;
 	text-align: center;
 	line-height: 40px;
@@ -1582,7 +1583,7 @@ ol {
 .footer-widget ul li a {
 	line-height: 36px;
 	font-size: 16px;
-	color: #b2b2b2;
+	color: #ffffff;
 }
 
 .newslatter-item h5 {
@@ -1592,7 +1593,7 @@ ol {
 }
 
 .newslatter-item p {
-	color: #b2b2b2;
+	color: #ffffff;
 	line-height: 26px;
 }
 
@@ -1602,7 +1603,7 @@ ol {
 
 .newslatter-item .subscribe-form input {
 	color: #b2b2b2;
-	background: #303030;
+	background: #ffffff;
 	width: 100%;
 	height: 46px;
 	font-size: 16px;
@@ -1611,38 +1612,38 @@ ol {
 }
 
 .newslatter-item .subscribe-form input::-webkit-input-placeholder {
-	color: #b2b2b2;
+	color: #ffffff;
 }
 
 .newslatter-item .subscribe-form input::-moz-placeholder {
-	color: #b2b2b2;
+	color: #ffffff;
 }
 
 .newslatter-item .subscribe-form input:-ms-input-placeholder {
-	color: #b2b2b2;
+	color: #ffffff;
 }
 
 .newslatter-item .subscribe-form input::-ms-input-placeholder {
-	color: #b2b2b2;
+	color: #ffffff;
 }
 
 .newslatter-item .subscribe-form input::placeholder {
-	color: #b2b2b2;
+	color: #b1b1b1;
 }
-
 .newslatter-item .subscribe-form button {
 	display: inline-block;
 	color: #ffffff;
-	background: #e7ab3c;
-	font-size: 13px;
+	background: #d79681;
+	font-size: 11.5px;
 	font-weight: 700;
 	text-transform: uppercase;
-	border: 1px solid #e7ab3c;
+	border: 2px solid #d79681;
 	position: absolute;
 	right: 0;
 	top: 0;
 	padding: 13px 20px 12px;
 	cursor: pointer;
+	border-radius: 0px 15px 15px 0px;
 }
 
 .copyright-reserved {
@@ -1654,11 +1655,11 @@ ol {
 .copyright-reserved .copyright-text {
 	float: left;
 	font-size: 16px;
-	color: #b2b2b2;
+	color: #ffffff;
 }
 
 .copyright-reserved .copyright-text a {
-	color: #b2b2b2;
+	color: #ffffff;
 }
 
 .copyright-reserved .copyright-text i {
@@ -2023,7 +2024,7 @@ ol {
 	line-height: 39px;
 }
 
-.prduct-list .product-item {
+.product-list .product-item {
 	margin-bottom: 25px;
 }
 
@@ -2651,14 +2652,14 @@ ol {
 .cart-table table {
 	width: 100%;
 	min-width: 480px;
-	border: 1px solid #ebebeb;
+	/* border: 1px solid #C5D0DD; */
 }
 
 .cart-table table tr th {
 	font-size: 16px;
-	color: #252525;
+	color: #2B394A;
 	font-weight: 700;
-	border-bottom: 1px solid #ebebeb;
+	border-bottom: 1px solid #d79681;
 	text-align: center;
 	padding: 18px 0 19px;
 	text-transform: uppercase;
@@ -2686,7 +2687,7 @@ ol {
 }
 
 .cart-table table tr td.cart-title h5 {
-	color: #252525;
+	color: #2B394A;
 }
 
 .cart-table table tr td.p-price {
@@ -2695,7 +2696,7 @@ ol {
 
 .cart-table table tr td.p-price,
 .cart-table table tr td.total-price {
-	color: #e7ab3c;
+	color: #d79681;
 	font-size: 16px;
 	font-weight: 700;
 }
@@ -2716,14 +2717,14 @@ ol {
 .cart-table table tr td.qua-col .pro-qty {
 	width: 123px;
 	height: 46px;
-	border: 2px solid #ebebeb;
+	border: 2px solid #d79681;
 	padding: 0 15px;
 	float: left;
 }
 
 .cart-table table tr td.qua-col .pro-qty .qtybtn {
 	font-size: 24px;
-	color: #b2b2b2;
+	color: #d79681;
 	float: left;
 	line-height: 38px;
 	cursor: pointer;
@@ -2740,9 +2741,10 @@ ol {
 	font-size: 14px;
 	font-weight: 700;
 	border: none;
-	color: #4c4c4c;
+	color: #2B394A;
 	line-height: 40px;
 	float: left;
+	background-color: #f5f5f5;
 }
 
 .cart-table table tr td.total-price {
@@ -2751,7 +2753,7 @@ ol {
 
 .cart-table table tr td.close-td {
 	font-size: 16px;
-	color: #252525;
+	color: #2B394A;
 	width: 8%;
 }
 
@@ -2764,8 +2766,8 @@ ol {
 }
 
 .cart-buttons .continue-shop {
-	color: #b2b2b2;
-	border: 2px solid #ebebeb;
+	color: #2B394A;
+	border: 2px solid #d79681;
 	background: #ffffff;
 	margin-right: 8px;
 	padding: 12px 20px 12px 20px;
@@ -2773,9 +2775,9 @@ ol {
 }
 
 .cart-buttons .up-cart {
-	color: #252525;
-	background: #f3f3f3;
-	border: 2px solid #ebebeb;
+	color: #ffffff;
+	background: #d79681;
+	border: 2px solid #d79681;
 	padding: 12px 20px 12px 20px;
 }
 
@@ -2784,7 +2786,7 @@ ol {
 }
 
 .discount-coupon h6 {
-	color: #232530;
+	color: #2B394A;
 	font-weight: 700;
 	text-transform: uppercase;
 	margin-bottom: 16px;
@@ -2797,8 +2799,8 @@ ol {
 .discount-coupon .coupon-form input {
 	width: 100%;
 	height: 46px;
-	border: 2px solid #ebebeb;
-	color: #b2b2b2;
+	border: 2px solid #C5D0DD;
+	color: #2B394A;
 	font-size: 14px;
 	padding-left: 20px;
 }
@@ -2807,15 +2809,15 @@ ol {
 	position: absolute;
 	right: 0;
 	top: 0;
-	color: #252525;
+	color: #2B394A;
 	background: transparent;
 	border: 1px solid transparent;
 	padding: 13px 25px 10px 35px;
 }
 
 .proceed-checkout ul {
-	border: 2px solid #ebebeb;
-	background: #f3f3f3;
+	border: 2px solid #d79681;
+	background: white;
 	padding-left: 25px;
 	padding-right: 25px;
 	padding-top: 16px;
@@ -2826,7 +2828,7 @@ ol {
 	list-style: none;
 	font-size: 16px;
 	font-weight: 700;
-	color: #252525;
+	color: #2B394A;
 	text-transform: uppercase;
 	overflow: hidden;
 }
@@ -2834,7 +2836,7 @@ ol {
 .proceed-checkout ul li.subtotal {
 	font-weight: 400;
 	text-transform: capitalize;
-	border-bottom: 1px solid #ffffff;
+	border-bottom: 1px solid #d79681;
 	padding-bottom: 14px;
 }
 
@@ -2847,7 +2849,7 @@ ol {
 }
 
 .proceed-checkout ul li.cart-total span {
-	color: #e7ab3c;
+	color: #d79681;
 }
 
 .proceed-checkout ul li span {
@@ -2858,7 +2860,7 @@ ol {
 	font-size: 14px;
 	font-weight: 700;
 	color: #ffffff;
-	background: #252525;
+	background: #d79681;
 	text-transform: uppercase;
 	padding: 15px 25px 14px 25px;
 	display: block;
@@ -2880,11 +2882,11 @@ ol {
 
 .checkout-content .content-btn,
 .checkout-content input {
-	color: #252525;
+	color: #2B394A;
 	font-size: 16px;
-	border: 2px solid #ebebeb;
+	border: 2px solid #C5D0DD;
 	padding: 14px 20px;
-	background: #f3f3f3;
+	background: #C5D0DD;
 	text-align: center;
 	display: block;
 }
@@ -2894,13 +2896,13 @@ ol {
 }
 
 .checkout-form h4 {
-	color: #252525;
+	color: #2B394A;
 	font-weight: 700;
 	margin-bottom: 30px;
 }
 
 .checkout-form label {
-	color: #252525;
+	color: #2B394A;
 	font-size: 16px;
 	margin-bottom: 5px;
 }
@@ -2931,7 +2933,7 @@ ol {
 	padding-left: 32px;
 	margin-bottom: 0;
 	font-size: 14px;
-	color: #252525;
+	color: #2B394A;
 }
 
 .checkout-form .create-item label input {
@@ -2940,8 +2942,8 @@ ol {
 }
 
 .checkout-form .create-item label input:checked~span {
-	background: #e7ab3c;
-	border-color: #e7ab3c;
+	background: #C5D0DD;
+	border-color: #C5D0DD;
 }
 
 .checkout-form .create-item label .checkmark {
@@ -2980,7 +2982,7 @@ ol {
 
 .checkout-form .place-order .order-total .order-table li {
 	list-style: none;
-	color: #252525;
+	color: #2B394A;
 	font-size: 14px;
 	font-weight: 700;
 	text-transform: uppercase;
@@ -3005,7 +3007,7 @@ ol {
 }
 
 .checkout-form .place-order .order-total .order-table li.total-price span {
-	color: #e7ab3c;
+	color: #C5D0DD;
 }
 
 .checkout-form .place-order .order-total .order-table li span {
@@ -3022,7 +3024,7 @@ ol {
 	padding-left: 32px;
 	margin-bottom: 0;
 	font-size: 14px;
-	color: #252525;
+	color: #2B394A;
 }
 
 .checkout-form .place-order .order-total .payment-check .pc-item label input {
@@ -3031,8 +3033,8 @@ ol {
 }
 
 .checkout-form .place-order .order-total .payment-check .pc-item label input:checked~span {
-	background: #e7ab3c;
-	border-color: #e7ab3c;
+	background: #C5D0DD;
+	border-color: #C5D0DD;
 }
 
 .checkout-form .place-order .order-total .payment-check .pc-item label .checkmark {
@@ -3063,8 +3065,8 @@ ol {
 
 .checkout-form .place-order .order-total .order-btn .place-btn {
 	padding: 13px 40px 11px;
-	background: #000000;
-	border-color: #000000;
+	background: #2B394A;
+	border-color: #2B394A;
 }
 
 /*---------------------
@@ -3759,15 +3761,22 @@ ol {
 /*---------------------
   Register Form
 -----------------------*/
+.pageBody{
+	background:url(../img/skinCarePics/22.png) ;
+	background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+}
 
 .register-login-section {
 	padding-top: 72px;
 	padding-bottom: 80px;
+	font-weight: bold;
 }
 
 .register-form h2,
 .login-form h2 {
-	color: #252525;
+	color: #2B394A;
 	font-weight: 700;
 	text-align: center;
 	margin-bottom: 35px;
@@ -3812,7 +3821,7 @@ ol {
 
 .register-form .switch-login .or-login,
 .login-form .switch-login .or-login {
-	color: #252525;
+	color: #2B394A;
 	font-size: 14px;
 	letter-spacing: 2px;
 	text-transform: uppercase;
@@ -3887,7 +3896,7 @@ ol {
 	line-height: 20px;
 	margin-top: -2px;
 	font-size: 14px;
-	color: #6B6B6B;
+	color: #2B394A
 }
 
 /* ------------------------------ Responsive Media Styles ---------------------------- */
